5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1793_1614.log
== TEST (2019-05-30 18:53:49) 
-- CODE:
from numpy import*
v=array(eval(input("vetor; ")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:53:53) 
-- CODE:
from numpy import*
v=array(eval(input("vetor; ")))
print(v)
-- EXECUTION TIME:
0.421143
-- TEST CASE 1:
---- input:
["BANANA","FEIJOADA","TOMATE"]
[300,50,60]
---- correct output:
366.5
---- user output:
['BANANA' 'FEIJOADA' 'TOMATE']
-- TEST CASE 2:
---- input:
["BANANA","FEIJOADA","OMELETE"]
[150,100,60]
---- correct output:
334.9
---- user output:
['BANANA' 'FEIJOADA' 'OMELETE']
-- TEST CASE 3:
---- input:
["OMELETE","FEIJOADA","BIFE"]
[100,130,140]
---- correct output:
682.1
---- user output:
['OMELETE' 'FEIJOADA' 'BIFE']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:32:06) 
-- CODE:
from numpy import*
va=input("atividades")
v=array(eval(input("vetor   ")))
x=0
i=0
s=0
cont=0
while()


print(v)
-- ERROR:
File "XXXX", line 8
    while()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:32:08) 
-- CODE:
from numpy import*
va=input("atividades")
v=array(eval(input("vetor   ")))
x=0
i=0
s=0
cont=0
while()


print(v)
-- ERROR:
File "XXXX", line 8
    while()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:32:38) 
-- CODE:
from numpy import*
va=input("atividades")
v=array(eval(input("vetor   ")))
x=0
i=0
s=0
cont=0
while(i<)
print(v)
-- ERROR:
File "XXXX", line 8
    while(i<)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
